[project]
name = "blogagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.6",
    "langgraph>=0.5.2",
    "langgraph-cli[inmem]>=0.3.4",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
